--- a/Bertha/app/build.gradle
+++ b/Bertha/app/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:27.+'
     compile 'com.sendbird.sdk:sendbird-android-sdk:3.0.46'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:design:26.+'
     testCompile 'junit:junit:4.12'
 }
